Added pitch contact person
